--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,8 +61,8 @@ nav .link a{
 }
 
 footer{
-    display: grid;
-    grid-template-columns: 30% 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: hsl(240 4.8% 95.9%);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
