--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ body{
 nav{
     display: grid;
     grid-template-columns: 8vh auto;
-    background-color: #fff;
+    background-color: hsl(240 4.8% 95.9%);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     height: 100%;
 }
@@ -65,4 +65,5 @@ footer{
     justify-content: center;
     align-items: center;
     background-color: hsl(240 4.8% 95.9%);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
