Ajout d'une page de succès pour le formulaire de contact, mise à jour des styles et amélioration de la structure du formulaire.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,6 +5,11 @@ main{
 
 /*Intro*/
 
+body{
+    display: grid;
+    grid-template-rows: 8vh auto 8vh;
+}
+
 main #intro{
     display: grid;
     grid-template-columns: 55% auto;
