--- a/static/css/index.css
+++ b/static/css/index.css
@@ -232,6 +232,7 @@ main #contact #form-contact {
     width: 50%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -248,7 +249,6 @@ main #contact #form-contact p {
     font-size: 1rem;
     font-family: Inter-Medium;
     text-align: center;
-    text-align: start;
 }
 
 main #contact #form-contact form {
